<resources>
    <string name="app_name">Firebase Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_digite_seu_nome">Digite seu nome</string>
    <string name="hint_digite_seu_e_mail">Digite seu e-mail</string>
    <string name="btn_text_cadastrar">Cadastrar</string>
    <string name="hint_digite_sua_senha">Digite sua senha</string>
    <string name="btn_text_entrar">Entrar</string>
    <string name="text_criar_conta">Criar conta</string>
    <string name="text_ola">Olá,</string>
    <string name="text_sair">Sair</string>
    <string name="hint_digite_uma_mensagem">Digite uma mensagem</string>
    <string name="texto_btn_salvar_mensagem">Salvar Mensagem</string>
</resources>